--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Lettermole - Support & Legal Information</title>
+		<title>Lettermole - Support Information</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<ul class="actions special">
 						<li><a href="#privacy" class="button scrolly">Privacy Policy</a></li>
 						<li><a href="#terms" class="button scrolly">Terms & Conditions</a></li>
-						<li><a href="#support" class="button scrolly">Support</a></li>
+						<li><a href="#support" class="button scrolly">Support & Help</a></li>
 					</ul>
 				</div>
 			</section>
@@ -30,26 +30,52 @@
 					<header class="major">
 						<h2>Privacy Policy</h2>
 					</header>
-					<p>At Lettermole, we take your privacy seriously. This policy describes how we collect, use, and protect your personal information.</p>
+					<p>This privacy policy applies to the LETTERMOLE app (hereby referred to as "Application") for mobile devices that was created by Joseph Macari (hereby referred to as "Service Provider") as an Ad Supported service. This service is intended for use "AS IS".</p>
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<h3>Information We Collect</h3>
-							<p>We collect information that you provide directly to us, including:</p>
+							<h3>Information Collection and Use</h3>
+							<p>The Application collects information when you download and use it. This information may include information such as:</p>
 							<ul>
-								<li>Account information (name, email, etc.)</li>
-								<li>Usage data and analytics</li>
-								<li>Communication preferences</li>
+								<li>Your device's Internet Protocol address (e.g. IP address).</li>
+								<li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages.</li>
+								<li>The time spent on the Application.</li>
+								<li>The operating system you use on your mobile device.</li>
 							</ul>
+							<p>The Application does not gather precise information about the location of your mobile device. For a better experience, while using the Application, the Service Provider may require you to provide us with certain personally identifiable information. The information that the Service Provider request will be retained by them and used as described in this privacy policy.</p>
 						</div>
 						<div class="col-6 col-12-medium">
-							<h3>How We Use Your Information</h3>
-							<p>Your information helps us:</p>
+							<h3>Third Party Access</h3>
+							<p>Only aggregated, anonymised data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement. Please note that the Application utilises third-party services that have their own Privacy Policy about handling data. Below are the links to the Privacy Policy of the third-party service providers used by the Application:</p>
 							<ul>
-								<li>Provide and improve our services</li>
-								<li>Communicate with you</li>
-								<li>Ensure security and prevent fraud</li>
+								<li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
+								<li><a href="https://www.apple.com/legal/privacy/en-ww/">Apple In-App Purchases</a></li>
+							</ul>
+							<p>AdMob may collect information such as your device identifiers, IP address, and interactions with ads. These ads may be personalised or non-personalised based on your preferences. You can manage your ad preferences via your device settings or Google’s Ad Settings. The Service Provider does not have access to or collect payment information. Purchases made through the Apple App Store are processed directly by Apple and are subject to Apple’s privacy policy. The Service Provider may disclose User Provided and Automatically Collected Information:</p>
+							<ul>
+								<li>As required by law, such as to comply with a subpoena, or similar legal process.</li>
+								<li>When they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request.</li>
+								<li>With their trusted services providers who work on their behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</li>
 							</ul>
 						</div>
+						       <div class="row gtr-150">
+						            <div class="col-6 col-12-medium">
+						                <h3>Your New Section Title</h3>
+						                <p>Your new section content goes here.</p>
+						                <ul>
+						                    <li>First point</li>
+						                    <li>Second point</li>
+						                </ul>
+						                <p>Additional content goes here.</p>
+						            </div>
+						            <div class="col-6 col-12-medium">
+						                <h3>Another New Section</h3>
+						                <p>Content for another section goes here.</p>
+						                <ul>
+						                    <li>Point one</li>
+						                    <li>Point two</li>
+						                </ul>
+						                <p>More content here.</p>
+						            </div>
 					</div>
 				</div>
 			</section>
