--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
 								<li><a href="https://www.apple.com/legal/privacy/en-ww/">Apple In-App Purchases</a></li>
 							</ul>
-							<p>AdMob may collect information such as your device identifiers, IP address, and interactions with ads. These ads may be personalised or non-personalised based on your preferences. You can manage your ad preferences via your device settings or Google’s Ad Settings. The Service Provider does not have access to or collect payment information. Purchases made through the Apple App Store are processed directly by Apple and are subject to Apple’s privacy policy. The Service Provider may disclose User Provided and Automatically Collected Information:</p>
+							<p>AdMob may collect information such as your device identifiers, IP address, and interactions with ads. These ads may be personalised or non-personalised based on your preferences. You can manage your ad preferences via your device settings or <a href="https://adssettings.google.com/">Google’s Ad Settings</a>. The Service Provider does not have access to or collect payment information. Purchases made through the Apple App Store are processed directly by Apple and are subject to Apple’s privacy policy. The Service Provider may disclose User Provided and Automatically Collected Information:</p>
 							<ul>
 								<li>As required by law, such as to comply with a subpoena, or similar legal process.</li>
 								<li>When they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request.</li>
@@ -59,22 +59,38 @@
 						</div>
 						       <div class="row gtr-150">
 						            <div class="col-6 col-12-medium">
-						                <h3>Your New Section Title</h3>
-						                <p>Your new section content goes here.</p>
-						                <ul>
-						                    <li>First point</li>
-						                    <li>Second point</li>
-						                </ul>
-						                <p>Additional content goes here.</p>
+						                <h3>Device Permissions</h3>
+						                <p>The Application may require certain permissions for functionality, such as internet access for downloading data or displaying ads. The Application does not request access to sensitive permissions like file storage or precise location tracking.</p>
 						            </div>
 						            <div class="col-6 col-12-medium">
-						                <h3>Another New Section</h3>
-						                <p>Content for another section goes here.</p>
-						                <ul>
-						                    <li>Point one</li>
-						                    <li>Point two</li>
-						                </ul>
-						                <p>More content here.</p>
+						                <h3>Opt-Out Rights</h3>
+						                <p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p>
+						            </div>
+							    <div class="col-6 col-12-medium">
+						                <h3>Data Retention Policy</h3>
+						                <p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. If you'd like them to delete User Provided Data that you have provided via the Application, please contact them at <strong>whisky.jamuk@gmail.com</strong> and they will respond in a reasonable time.</p>
+						            </div>
+							       <div class="col-6 col-12-medium">
+						                <h3>Children</h3>
+						                <p>The Service Provider does not use the Application to knowingly solicit data from or market to children under the age of 13. The Application does not address anyone under the age of 13. The Service Provider does not knowingly collect personally identifiable information from children under 13 years of age. In the case the Service Provider discover that a child under 13 has provided personal information, the Service Provider will immediately delete this from their servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact the Service Provider (whisky.jamuk@gmail.com) so that they will be able to take the necessary actions.</p>
+						            </div>
+							       <div class="col-6 col-12-medium">
+						                <h3>Security</h3>
+						                <p>The Service Provider values the confidentiality of your information. The Service Provider provides safeguards to protect information the Service Provider processes and maintains. However, no method of electronic transmission or storage is 100% secure, and the Service Provider cannot guarantee absolute security.</p>
+						            </div>
+							        <div class="col-6 col-12-medium">
+						                <h3>Changes</h3>
+						                <p>This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to the Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p>
+						            </div>
+							        <div class="col-6 col-12-medium">
+						                <h3>Your Consent</h3>
+						                <p>By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by us.</p>
+						            </div>
+							        <div class="col-6 col-12-medium">
+						                <h3>Contact Us</h3>
+						                <p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at <strong>whiskyjamuk@gmail.com</strong>.
+
+This privacy policy is effective as of 2024-11-25</p>
 						            </div>
 					</div>
 				</div>
