--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
 						            </div>
 							        <div class="col-6 col-12-medium">
 						                <h3>Contact Us</h3>
-						                <p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at <strong>whiskyjamuk@gmail.com</strong>.
-
-This privacy policy is effective as of 2024-11-25</p>
+						                <p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at <strong>whiskyjamuk@gmail.com</strong>. This privacy policy is effective as of 2024-11-25</p>
 						            </div>
 					</div>
 				</div>
@@ -104,61 +102,100 @@ This privacy policy is effective as of 2024-11-25</p>
 					</header>
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<h3>Service Terms</h3>
-							<p>By using Lettermole, you agree to these terms:</p>
+							<p>These terms and conditions apply to the Lettermole app (hereby referred to as "Application") for mobile devices developed by Joseph Macari (hereby referred to as "Service Provider") as an Ad-Supported service. Upon downloading or utilising the Application, you are automatically agreeing to the following terms. It is strongly advised that you thoroughly read and understand these terms prior to using the Application. The following actions are strictly prohibited:</p>
 							<ul>
-								<li>Use the service as intended</li>
-								<li>Maintain account security</li>
-								<li>Comply with all applicable laws</li>
-								<li>Respect other users' rights</li>
+								<li>Unauthorised copying or modification of the Application or any part of it.</li>
+								<li>Reverse-engineering, extracting the source code, translating the Application into other languages, or creating derivative works.</li>
+								<li>Unauthorised use of trademarks, copyrights, database rights, and other intellectual property associated with the Application.</li>
+							</ul>
+							<p>All intellectual property rights related to the Application remain the sole property of the Service Provider. The Service Provider is dedicated to ensuring that the Application is as beneficial and efficient as possible. As such, they reserve the right to modify the Application or charge for services provided through it at any time and for any reason. The Service Provider assures you that any charges for the Application or its services will be clearly communicated in advance.</p>
+							<p>The Service Provider is committed to ensuring that the Application is as beneficial and efficient as possible. As such, they reserve the right to modify the Application or charge for services provided through it at any time and for any reason. The Service Provider assures you that any charges for the Application or its services will be clearly communicated in advance.</p>
+							<p>The Application stores and processes only the personal data required to provide the Service effectively. It is your responsibility to maintain the security of your phone and access to the Application. For security purposes, the Service Provider strongly advises against jailbreaking or rooting your phone. These actions may:</p>
+							<ul>
+								<li>Expose your phone to malware, viruses, or malicious programs.</li>
+								<li>Compromise your phone's security features.</li>
+								<li>Result in the Application functioning incorrectly or not at all.</li>
+							</ul>
+							<p>Please note that the Application utilises third-party services that have their own Terms and Conditions. Below are the links to the Terms and Conditions of the third-party service providers used by the Application:</p>
+							<ul>
+								<li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
-							<h3>Limitations</h3>
-							<p>We reserve the right to:</p>
-							<ul>
-								<li>Modify or discontinue services</li>
-								<li>Remove content that violates terms</li>
-								<li>Terminate accounts for violations</li>
-								<li>Update these terms as needed</li>
-							</ul>
+							<h3>Limitations of Liability</h3>
+							<p>Please be aware that the Service Provider does not assume responsibility for certain aspects. Some functions of the Application require an active internet connection, which can be Wi-Fi or provided by your mobile network provider. The Service Provider cannot be held responsible if the Application does not function at full capacity due to lack of access to Wi-Fi or if you have exhausted your data allowance.</p>
+							<p>If you are using the application outside of a Wi-Fi area, please be aware that your mobile network provider's agreement terms still apply. Consequently, you may incur charges from your mobile provider for data usage during the connection to the application, or other third-party charges. By using the application, you accept responsibility for any such charges, including roaming data charges if you use the application outside of your home territory (i.e., region or country) without disabling data roaming. If you are not the bill payer for the device on which you are using the application, they assume that you have obtained permission from the bill payer.</p>
+							<p>Similarly, the Service Provider cannot always assume responsibility for your usage of the application. For instance, it is your responsibility to ensure that your device remains charged. If your device runs out of battery and you are unable to access the Service, the Service Provider cannot be held responsible.</p>
+							<p>In terms of the Service Provider's responsibility for your use of the application, it is important to note that while they strive to ensure that it is updated and accurate at all times, they do rely on third parties to provide information to them so that they can make it available to you. The Service Provider accepts no liability for any loss, direct or indirect, that you experience as a result of relying entirely on this functionality of the application.</p>
 						</div>
+						<div class="col-6 col-12-medium">
+							<h3>Updates and Termination</h3>
+							<p>The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.</p>
+						</div>
+						<div class="col-6 col-12-medium">
+							<h3>Changes to These Terms and Conditions</h3>
+							<p>The Service Provider may periodically update their Terms and Conditions. Therefore, you are advised to review this page regularly for any changes. Notice of updates will be posted on this page.</p>
+					</div>
+						<div class="col-6 col-12-medium">
+							<h3>Contact Us</h3>
+							<p>If you have any questions or suggestions about the Terms and Conditions, please do not hesitate to contact the Service Provider at <strong>whiskyjamuk@gmail.com</strong>. These terms and conditions are effective as of 2024-11-25</p>
 					</div>
 				</div>
 			</section>
 
 		<!-- Support -->
-			<section id="support" class="main style1 special">
+			<section id="support" class="main style1">
 				<div class="container">
 					<header class="major">
-						<h2>Support Information</h2>
+						<h2>Support & Help</h2>
 					</header>
-					<p>We're here to help you get the most out of Lettermole.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="icon solid major fa-question-circle"></span>
-							<h3>FAQ</h3>
-							<p>Find answers to common questions about using Lettermole in our frequently asked questions section.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">View FAQ</a></li>
+					<p>Welcome to the support page for <strong>LETTERMOLE!</strong> Here, you’ll find answers to common questions, troubleshooting tips, and ways to contact us for assistance.</p>
+					<div class="col-6 col-12-medium">
+							<h3>How do I use LETTERMOLE?</h3>
+							<p>Open the app and navigate through the main menu to select your desired game mode:</p>
+						<h4>Daily Challenge:</h4>
+						<ul>
+								<li>A unique challenge every day.</li>
+								<li>You only get one chance to play for a specific day—make it count!</li>
+								<li>Complete daily challenges to win valuable rewards that can be used in-game.</li>
 							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="icon solid major fa-envelope"></span>
-							<h3>Contact Support</h3>
-							<p>Need help? Our support team is available to assist you with any issues or questions.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">Contact Us</a></li>
+						<h4>Unlimited:</h4>
+						<ul>
+								<li>Enjoy endless games with a new, random bank of letters every time.</li>
+								<li>This mode is perfect for honing your skills.</li>
 							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="icon solid major fa-book"></span>
-							<h3>Documentation</h3>
-							<p>Access our comprehensive documentation to learn more about Lettermole's features.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">Read Docs</a></li>
+						<p>For detailed game statistics, tap the star icon on the main menu. You’ll find the following data for each game mode:</p>
+						<ul>
+							<li>Total score from all games combined.</li>
+							<li>Total number of games played.</li>
+							<li>Total LETTERMOLE!s achieved.</li>
+							<li>Your high score for each game mode.</li>
+							<li>Number of words made for each word length.</li>
+							<li>Your longest word.</li>
+							<li>Total score for the current month’s Daily Challenges.</li>
+							<li>Your best month and its total score for Daily Challenges.</li>
 							</ul>
-						</div>
+						<p>Achieve a <strong>LETTERMOLE!</strong> by clearing the gameboard of all letters. Doing so rewards you with a score bonus and additional in-game rewards!</p>
+						<p>For in-depth instructions on gameplay mechanics, visit the <strong>‘How to Play’</strong> section (tap the <strong>question mark icon</strong> on the main menu).</p>
+					</div>
+						<div class="col-6 col-12-medium">
+							<h3>Why is my score not saving?</h3>
+							<p>Verify that your device has sufficient storage space.</p>
+							<p>Restart the app.</p>
+							<p>If the issue persists, please contact us for assistance.</p>
+					</div>
+					<div class="col-6 col-12-medium">
+							<h3>The app isn’t opening or keeps crashing.</h3>
+							<p>Ensure your device is running the latest iOS version.</p>
+							<p>Force close the app and try reopening it.</p>
+							<p>If the problem continues, uninstall and reinstall the app (note: your data may be reset).</p>
+					</div>
+					<div class="col-6 col-12-medium">
+							<h3>Need Further Assistance?</h3>
+							<p>If you didn’t find what you were looking for, feel free to reach out to us!</p>
+							<p>Email: <strong>whiskyjamuk@gmail.com</strong></p>
+							<p>We aim to respond within 24-48 hours.</p>
+					</div>
 					</div>
 				</div>
 			</section>
