--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<h3>Updates and Termination</h3>
-							<p>The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.</p>
+							<p>The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application.</p>
+						<p>The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. </p>
+						<p>The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.</p>
 						</div>
 						<div class="col-6 col-12-medium">
 							<h3>Changes to These Terms and Conditions</h3>
@@ -153,13 +155,13 @@
 					<div class="col-6 col-12-medium">
 							<h3>How do I use LETTERMOLE?</h3>
 							<p>Open the app and navigate through the main menu to select your desired game mode:</p>
-						<h4>Daily Challenge:</h4>
+						<p><strong>Daily Challenge:</strong></p>
 						<ul>
 								<li>A unique challenge every day.</li>
 								<li>You only get one chance to play for a specific day—make it count!</li>
 								<li>Complete daily challenges to win valuable rewards that can be used in-game.</li>
 							</ul>
-						<h4>Unlimited:</h4>
+						<p><strong>Unlimited:</strong></p>
 						<ul>
 								<li>Enjoy endless games with a new, random bank of letters every time.</li>
 								<li>This mode is perfect for honing your skills.</li>
@@ -180,21 +182,24 @@
 					</div>
 						<div class="col-6 col-12-medium">
 							<h3>Why is my score not saving?</h3>
-							<p>Verify that your device has sufficient storage space.</p>
-							<p>Restart the app.</p>
-							<p>If the issue persists, please contact us for assistance.</p>
+							<ul>
+							<li>Verify that your device has sufficient storage space.</li>
+							<li>Restart the app.</li>
+							<li>If the issue persists, please contact us for assistance.</li>
+								<ul>
 					</div>
 					<div class="col-6 col-12-medium">
 							<h3>The app isn’t opening or keeps crashing.</h3>
-							<p>Ensure your device is running the latest iOS version.</p>
-							<p>Force close the app and try reopening it.</p>
-							<p>If the problem continues, uninstall and reinstall the app (note: your data may be reset).</p>
+						<ul>
+							<li>Ensure your device is running the latest iOS version.</li>
+							<li>Force close the app and try reopening it.</li>
+							<li>If the problem continues, uninstall and reinstall the app (note: your data may be reset).</li>
+					<ul>
 					</div>
 					<div class="col-6 col-12-medium">
 							<h3>Need Further Assistance?</h3>
-							<p>If you didn’t find what you were looking for, feel free to reach out to us!</p>
+							<p>If you didn’t find what you were looking for, feel free to reach out to us! We aim to respond within 24-48 hours.</p>
 							<p>Email: <strong>whiskyjamuk@gmail.com</strong></p>
-							<p>We aim to respond within 24-48 hours.</p>
 					</div>
 					</div>
 				</div>
