--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<span class="icon solid major fa-shield-alt"></span>
 					<h1><strong>Lettermole</strong><br />
 					Support & Legal Information</h1>
-					<p>Everything you need to know about our policies, terms, and support services.</p>
+					
 					<ul class="actions special">
 						<li><a href="#privacy" class="button scrolly">Privacy Policy</a></li>
 						<li><a href="#terms" class="button scrolly">Terms & Conditions</a></li>
@@ -131,7 +131,7 @@
 						<div class="col-6 col-12-medium">
 							<h3>Updates and Termination</h3>
 							<p>The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application.</p>
-						<p>The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.The Service Provider may wish to update the application at some point. The application is currently available as per the requirements for the operating system (and for any additional systems they decide to extend the availability of the application to) may change, and you will need to download the updates if you want to continue using the application. The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. </p>
+						<p>The Service Provider does not guarantee that it will always update the application so that it is relevant to you and/or compatible with the particular operating system version installed on your device. However, you agree to always accept updates to the application when offered to you. </p>
 						<p>The Service Provider may also wish to cease providing the application and may terminate its use at any time without providing termination notice to you. Unless they inform you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must cease using the application, and (if necessary) delete it from your device.</p>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -207,13 +207,8 @@
 
 		<!-- Footer -->
 			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
 				<ul class="copyright">
-					<li>&copy; Lettermole</li>
+					<li>&copy; 2024 Joseph Macari</li>
 				</ul>
 			</section>
 
