--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Lettermole - Support Information</title>
+		<title>Lettermole - Information</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,8 +13,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-shield-alt"></span>
-					<h1><strong>Lettermole</strong><br />
-					Support & Legal Information</h1>
+					<h1><strong>Lettermole</strong></h1>
 					
 					<ul class="actions special">
 						<li><a href="#privacy" class="button scrolly">Privacy Policy</a></li>
